--- a/Example/server/lib/turbolinks_demo/views/layout.erb
+++ b/Example/server/lib/turbolinks_demo/views/layout.erb
@@ -9,7 +9,7 @@
       document.addEventListener("click", function(event) {
         if (event.target && event.target.matches("[data-behavior~=post-message]")) {
           if (window.webkit) { webkit.messageHandlers.turbolinksDemo.postMessage("Hello from JavaScript!"); };
-          if (window.RNTurbolinks) { RNTurbolinks.postMessage("Hello from JavaScript!"); };
+          if (window.turbolinksDemo) { turbolinksDemo.postMessage("Hello from JavaScript!"); };
           event.preventDefault();
         }
       });
