Convert component to module android

--- a/android/src/main/res/layout/activity_custom.xml
+++ b/android/src/main/res/layout/activity_custom.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent">
 
 
-    <com.reactlibrary.RNTurbolinksView
+    <com.basecamp.turbolinks.TurbolinksView
         android:id="@+id/turbolinks_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
