--- a/android/src/main/res/layout/activity_web.xml
+++ b/android/src/main/res/layout/activity_web.xml
@@ -3,6 +3,13 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/turbolinks_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="?attr/colorPrimary"
+        android:elevation="4dp"
+        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"/>
 
     <com.basecamp.turbolinks.TurbolinksView
         android:id="@+id/turbolinks_view"
