--- a/android/src/main/res/layout/activity_web.xml
+++ b/android/src/main/res/layout/activity_web.xml
@@ -8,6 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="?attr/colorPrimary"
+        android:elevation="4dp"
         android:theme="@style/ThemeOverlay.AppCompat.ActionBar"/>
 
     <com.basecamp.turbolinks.TurbolinksView
