--- a/android/src/main/res/layout/activity_native.xml
+++ b/android/src/main/res/layout/activity_native.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent">
 
     <android.support.v7.widget.Toolbar
-        android:id="@+id/native_toolbar"
+        android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="?attr/colorPrimary"
@@ -12,7 +12,7 @@
         android:theme="@style/ThemeOverlay.AppCompat.ActionBar"/>
 
     <com.facebook.react.ReactRootView
-        android:id="@+id/native_view"
+        android:id="@+id/react_root_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
