--- a/android/src/main/res/layout/activity_web.xml
+++ b/android/src/main/res/layout/activity_web.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent">
 
     <android.support.v7.widget.Toolbar
-        android:id="@+id/turbolinks_toolbar"
+        android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="?attr/colorPrimary"
