Implements parceable to TurbolinksRoute

--- a/android/src/main/res/layout/activity_tabbed.xml
+++ b/android/src/main/res/layout/activity_tabbed.xml
@@ -13,10 +13,17 @@
         android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
 
-    <com.basecamp.turbolinks.TurbolinksView
-        android:id="@+id/turbolinks_view"
+    <android.support.v4.view.ViewPager
+        android:id="@+id/viewpager"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"/>
+        android:layout_height="match_parent" />
+
+    <android.support.design.widget.BottomNavigationView
+        android:id="@+id/navigation"
+        android:layout_width="match_parent"
+        android:layout_height="56dp"
+        android:layout_gravity="start"
+        android:elevation="8dp"
+        android:background="?attr/colorBackgroundFloating"/>
 
 </LinearLayout>
