More work tabbed activity

--- a/android/src/main/res/layout/activity_tabbed.xml
+++ b/android/src/main/res/layout/activity_tabbed.xml
@@ -16,7 +16,8 @@
     <android.support.v4.view.ViewPager
         android:id="@+id/viewpager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="0dp"
+        android:layout_weight="1"/>
 
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/navigation"
@@ -24,6 +25,6 @@
         android:layout_height="56dp"
         android:layout_gravity="start"
         android:elevation="8dp"
-        android:background="?attr/colorBackgroundFloating"/>
+        android:background="?attr/colorPrimaryDark"/>
 
 </LinearLayout>
