--- a/android/src/main/res/layout/activity_native.xml
+++ b/android/src/main/res/layout/activity_native.xml
@@ -16,7 +16,6 @@
     <com.facebook.react.ReactRootView
         android:id="@+id/react_root_view"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"/>
+        android:layout_height="match_parent"/>
 
 </LinearLayout>
