--- a/android/src/main/res/layout/activity_tabbed.xml
+++ b/android/src/main/res/layout/activity_tabbed.xml
@@ -13,7 +13,7 @@
         android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
 
-    <android.support.v4.view.ViewPager
+    <com.reactlibrary.util.TurbolinksViewPager
         android:id="@+id/viewpager"
         android:layout_width="match_parent"
         android:layout_height="0dp"
