--- a/android/src/main/res/layout/activity_web.xml
+++ b/android/src/main/res/layout/activity_web.xml
@@ -13,7 +13,7 @@
         android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
 
-    <com.reactlibrary.util.TurbolinksViewFrame
+    <com.lazaronixon.rnturbolinks.util.TurbolinksViewFrame
         android:id="@+id/turbolinks_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
