Remove background color loading view android

--- a/android/src/main/res/layout/custom_progress.xml
+++ b/android/src/main/res/layout/custom_progress.xml
@@ -2,8 +2,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/customProgress"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@android:color/white">
+    android:layout_height="match_parent">
 
     <com.facebook.react.ReactRootView
         android:id="@+id/turbolinks_custom_progress_indicator"
