Refactor navigationBar android

--- a/android/src/main/res/layout/activity_tabbed.xml
+++ b/android/src/main/res/layout/activity_tabbed.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <android.support.v7.widget.Toolbar
@@ -19,12 +20,10 @@
         android:layout_height="0dp"
         android:layout_weight="1"/>
 
-    <android.support.design.widget.BottomNavigationView
+    <com.aurelhubert.ahbottomnavigation.AHBottomNavigation
         android:id="@+id/navigation"
         android:layout_width="match_parent"
-        android:layout_height="56dp"
-        android:layout_gravity="start"
-        android:elevation="8dp"
-        android:background="?attr/colorPrimaryDark"/>
+        android:layout_height="wrap_content"
+        app:accentColor="?attr/colorAccent"/>
 
 </LinearLayout>
