--- a/android/src/main/res/layout/activity_native.xml
+++ b/android/src/main/res/layout/activity_native.xml
@@ -4,7 +4,7 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <com.lazaronixon.rnturbolinks.util.TurbolinksToolbar
+    <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
