--- a/Example/server/lib/turbolinks_demo/views/layout.erb
+++ b/Example/server/lib/turbolinks_demo/views/layout.erb
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0">
+    <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, viewport-fit=cover">
     <title><%= @title %></title>
     <script src="/turbolinks.js"></script>
     <script>
@@ -17,7 +17,7 @@
     <style>
       *:not(input):not(textarea) { -webkit-user-select: none }
       html { -webkit-text-size-adjust: 100% }
-      body { margin: 0; padding: 0 20px }
+      body { margin: 0; padding: 0 calc(env(safe-area-inset-right) + 20px) 0 calc(env(safe-area-inset-left) + 20px) }
       body, input { font: -apple-system-body }
       h1 { font: -apple-system-headline }
       footer { font: -apple-system-footnote; color: rgb(128, 128, 128); margin-top: 30px }
